--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,11 @@
 name: Build/release
 
 on:
-  push:
-    branches:
-      - 'main'
-      - 'master'
+  workflow_dispatch:
+    push:
+      branches:
+        - 'main'
+        - 'master'
 
 jobs:
   release:
