--- a/electron/package.json
+++ b/electron/package.json
@@ -57,7 +57,7 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "ThaUnknown",
+        "owner": "noobworth",
         "repo": "miru"
       }
     ],
