--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: cd electron && npm run publish
+
+      - name: Store build
+        uses: actions/upload-artifact@v4
+        with: 
+          name: miru-${{ matrix.platform }}
+          path: win-unpacked/
