--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with: 
           name: miru-build
-          path: dist/
+          path: ./dist
